[tool.poetry]
name = "interpretable-ml-project"
version = "0.1.0"
description = ""
authors = ["Amadeo Tunyi <amadeo.tunyi@yahoo.com>"]
readme = "README.md"
packages = [{ include = "ml_project" }]

[tool.poetry.dependencies]
python = "^3.12"

# ── Core ML ──────────────────────────────────────────────────────────────────
numpy = "^1.26"
pandas = "^2.2"
scikit-learn = "^1.5"
scipy = "^1.13"

# ── Deep learning ─────────────────────────────────────────────────────────────
torch = "^2.3"
torchvision = "^0.18"

# ── Experiment tracking ───────────────────────────────────────────────────────
mlflow = "^2.14"

# ── Visualisation ─────────────────────────────────────────────────────────────
matplotlib = "^3.9"
seaborn = "^0.13"

# ── Notebooks ─────────────────────────────────────────────────────────────────
jupyterlab = "^4.2"
ipywidgets = "^8.1"

[tool.poetry.group.dev.dependencies]
# ── Formatting & linting ──────────────────────────────────────────────────────
black          = "^24.4"
ruff           = "^0.4"
pycodestyle    = "^2.11"
pydocstyle     = "^6.3"
pre-commit     = "^3.7"

# ── Testing ───────────────────────────────────────────────────────────────────
pytest         = "^8.2"
pytest-cov     = "^5.0"

# ── Type checking ─────────────────────────────────────────────────────────────
mypy           = "^1.10"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ── Tool config ───────────────────────────────────────────────────────────────
[tool.black]
line-length    = 88
target-version = ["py312"]

[tool.ruff]
line-length    = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "D"]
ignore = ["E203", "W503", "D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["ml_project"]

[tool.pycodestyle]
max-line-length = 88
ignore          = ["E203", "W503"]

[tool.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "--cov=ml_project --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
